--- a/styles.css
+++ b/styles.css
@@ -344,3 +344,45 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
+.experiences {
+    margin-top: 40px;
+    padding: 40px;
+    background-color: #f0f0f0; 
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    /* max-width: 800px; */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.experiences h2 {
+    font-size: 46px;
+    font-weight: bold;
+    align-items: center;
+    color: #333;
+    margin-bottom: 20px;
+;
+}
+
+.experiences p{
+    font-size: 28px;
+    color: #666;
+    max-width: 600px;
+    margin: 0 auto;
+    line-height: 1.6;
+}
+
+.under-construction {
+    font-size: 18px;
+    font-weight: bold;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.gif-container img {
+    /* width: 300px;  */
+    height: auto;
+    border-radius: 10px;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); / */
+}
