add some photos

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -242,12 +243,16 @@ p {
 
 
 .about-me {
-    margin-top: 40px;
+    margin-top: 60px;
     text-align: center;
     padding: 20px;
     background-color: #fff; 
     border-radius: 10px; 
     /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
+}
+
+#about {
+    scroll-margin-top: 120px; 
 }
 
 .about-me h2 {
