--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,14 @@ p {
     scroll-margin-top: 120px; 
 }
 
+#experiences{
+    scroll-margin-top: 120px; 
+}
+
+#contact {
+    scroll-margin-top: 120px; 
+}
+
 .about-me h2 {
     font-size: 48px;
     font-weight: bold;
